# skyratio_calc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  generate_stubs.py  pyproject.toml  sky_ratio_calc.pyi  skyratio_calc.pyi
.github/workflows/: lint.yml  test.yml
src/: hello.cpp  sample_cpp.cpp  scene_raycaster.cpp  scene_raycaster.hpp  sky_ratio_checker.cpp  sky_ratio_checker.hpp
test/: benchmark.py  python_implementation.py  sample_python.py  test_binding.py  test_python_impl.py  test_sky_ratio_integration.py
