[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "skyratio_calc"
version = "0.1.0"
description = "天空率計算"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "20niship" }
]

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
cmake.verbose = true
logging.level = "INFO"

[tool.ruff]
line-length = 160
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.flake8]
max-line-length = 88
extend-ignore = "E203,"
max-complexity = 10
select = "E9,F63,F7,F82"
exclude = ["./build", "./src/ext", "site-packages", ".venv", "venv"]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.4",
    "pyright>=1.1.408",

    # "matplotlib>=3.9.4",
    # "numpy>=2.0.2",
]

# pyright tools
[tool.pyright]
venvPath = "./.venv"
pythonVersion = "3.12"
exclude = ["./build", "./src/ext", "site-packages", ".venv", "venv"]

